--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,21 @@
     <groupId>groupId</groupId>
     <artifactId>JC</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <java.version>17</java.version>
+        <org.projectlombok>1.18.24</org.projectlombok>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${org.projectlombok}</version>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
+
+
 
     <build>
         <plugins>
