--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>groupId</groupId>
-    <artifactId>JC</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>org.example</groupId>
+    <artifactId>GeometryLibrary</artifactId>
+    <version>1.1.0</version>
+    <modules>
+        <module>GeometryUtils</module>
+        <module>ThreeDimensionalShapes</module>
+    </modules>
+    <packaging>pom</packaging>
 
     <properties>
-        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <maven.compiler.plugin.version>3.10.1</maven.compiler.plugin.version>
         <org.projectlombok>1.18.24</org.projectlombok>
     </properties>
 
@@ -27,10 +34,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                </configuration>
+                <version>${maven.compiler.plugin.version}</version>
             </plugin>
         </plugins>
     </build>
